# aluguel_fpolis

./: .gitignore.save  README.md  aluguel_fpolis.ipynb  imoveis_gralha.csv  novos_imoveis.json  pyproject.toml  runner.py
coleta/: novos_imoveis.json  pipelines.py  settings.py
coleta/spiders/: dalton_andrade.py  export_markdown.py  ibagy.py  ibagy_FUNCIONANDO.py  ibagy_com_email.py  imoveis.json  imoveis_com_cod.json  imoveis_dalton.json  imoveis_piramides.json  markdown_extraido.md  pimamides.py  plot_aluguel_fpolis.ipynb  plot_ibagy.ipynb
coleta/utils/: email_utils.py
