[tool.poetry]
name = "aluguel-fpolis"
version = "0.1.0"
description = ""
authors = ["soutes <soutes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.27.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
